Working worker queue

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "scripts": {
     "example-server": "gulp && node ./build/js/examples/server.js",
-    "example-client": "gulp && node ./build/js/examples/client.js"
+    "example-client": "gulp && node ./build/js/examples/client.js",
+    "example-new-task": "gulp && node ./build/js/examples/new_task.js",
+    "example-worker": "gulp && node ./build/js/examples/worker.js"
   },
   "homepage": "https://github.com/SkippyZA/rx-amqplib#readme",
   "dependencies": {
