--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rx-amqplib",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "RxJS wrapper for the amqplib from squaremo",
   "repository": {
     "type": "git",
@@ -18,7 +18,9 @@
   "bugs": {
     "url": "https://github.com/SkippyZA/rx-amqplib/issues"
   },
+  "main": "src/RxAmqpLib.ts",
   "scripts": {
+    "build": "gulp",
     "example-client": "gulp && node ./examples/client.js",
     "example-emit-logs-direct": "gulp && node ./examples/emit_log_direct.js",
     "example-emit-logs-topic": "gulp && node ./examples/emit_log_topic.js",
@@ -46,6 +48,7 @@
     "gulp-rimraf": "^0.1.1",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-tslint": "^1.4.4",
-    "gulp-typescript": "^2.5.0"
+    "gulp-typescript": "^2.5.0",
+    "typescript": "^2.0.3"
   }
 }
