--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "sourceMap": false,
         "module": "commonjs",
         "noImplicitAny": true,
-        "preserveConstEnums": true
+        "preserveConstEnums": true,
+        "declaration": true
     },
     "compileOnSave": false,
     "files": [
