--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rx-amqplib",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "RxJS wrapper for the amqplib from squaremo",
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/SkippyZA/rx-amqplib/issues"
   },
-  "main": "src/RxAmqpLib.ts",
+  "main": "index.js",
   "scripts": {
     "clean": "node_modules/.bin/rimraf dist/*",
     "build:lint": "node_modules/.bin/tslint --config=tslint.json --project=tsconfig.json",
